--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -119,11 +119,11 @@
 			suggestions.innerHTML = html;		
 		}
 
-		const searchInput = document.querySelector('.search')
-		const suggestions = document.querySelector('.suggestions')
+		const searchInput = document.querySelector('.search');
+		const suggestions = document.querySelector('.suggestions');
 
-		searchInput.addEventListener('change', displayMatches)
-		searchInput.addEventListener('keyup', displayMatches)
+		searchInput.addEventListener('change', displayMatches);
+		searchInput.addEventListener('keyup', displayMatches);
 	</script>
 </body>
 </html>
