--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -67,7 +67,7 @@
 		}
 
 		canvas.addEventListener('mousemove', draw);
-		canvas.addEventListener('mousedown', () => {
+		canvas.addEventListener('mousedown', (event) => {
 			isDrawing = true;
 			lastX = event.offsetX;
 			lastY = event.offsetY;
