Day 19 - Webcam video fun

--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -85,8 +85,8 @@
 					document.exitFullscreen();
 				} else if (document.msExitFullscreen) {
 					document.msExitFullscreen();
-				} else if (document.mozExitFullScreen) {
-					document.mozExitFullScreen();
+				} else if (document.mozExitFullscreen) {
+					document.mozExitFullscreen();
 				} else if (document.webkitExitFullscreen) {
 					document.webkitExitFullscreen();
 				}
@@ -121,7 +121,6 @@
 		progress.addEventListener('mousemove', (e) => mouseDown && scrub(e));
 		progress.addEventListener('mousedown', () => mouseDown = true);
 		progress.addEventListener('mouseup', () => mouseDown = false);
-		
 	</script>
 </body>
 </html>
